BuildHughes/translation-tool/inputs/source_meta/objects/HnsServiceOfferingss__x.object
<CustomObject>
    <description>HnsServiceOfferingss</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsServiceOfferingss</externalName>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_OPTIONCODE__c</fullName>
        <description>Z_OPTIONCODE</description>
        <externalDeveloperName>Z_OPTIONCODE</externalDeveloperName>
        <label>Option Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_OPTIONNAME__c</fullName>
        <description>Z_OPTIONNAME</description>
        <externalDeveloperName>Z_OPTIONNAME</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_OPTIONVALUE__c</fullName>
        <description>Z_OPTIONVALUE</description>
        <externalDeveloperName>Z_OPTIONVALUE</externalDeveloperName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsServiceOfferingss</label>
    <pluralLabel>HnsServiceOfferingss</pluralLabel>
</CustomObject>